freshed-rs-macros/tests/ui/fail/html_trailing_garbage.rs
use freshed_rs_macros::html;

fn main() {
    let _ = html!(<div>ok</div>,);
}
